@@ -2,6 +2,9 @@ Changes in @NEW@:
   o Client Changes:
     * Erases of critical troves is no longer considered a reason to restart
       conary.
+    * You can now delete troves, update from changesets, and update with a
+      full version specified without an installLabelPath set (CNY-281).
+
   o Bug Fixes:
     * Fixed a bug triggered when a critical update of a trove depended on 
       an erase.
